--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.548.0",
+    "ogl": "^1.0.11",
+    "react-router-dom": "^7.9.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.16",
     "tw-animate-css": "^1.4.0"
@@ -35,6 +37,7 @@
     "@types/node": "^22.18.6",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.3",
     "autoprefixer": "^10.4.21",
     "electron": "^38.1.2",
