--- a/components.json
+++ b/components.json
@@ -10,6 +10,7 @@
     "cssVariables": true,
     "prefix": ""
   },
+  "iconLibrary": "lucide",
   "aliases": {
     "components": "src/renderer/src/components/bits",
     "utils": "src/renderer/src/lib/twMerge",
@@ -17,5 +18,7 @@
     "lib": "src/renderer/src/lib",
     "hooks": "src/renderer/src/hooks"
   },
-  "iconLibrary": "lucide"
+  "registries": {
+    "@react-bits": "https://reactbits.dev/r/{name}.json"
+  }
 }
